--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :eventDate %>
-    <%= form.date_select :eventDate, id: :event_eventDate %>
+    <%= form.label :event_date %>
+    <%= form.date_select :event_date, id: :event_event_date %>
   </div>
 
   <div class="field">
-    <%= form.label :eventTime %>
-    <%= form.time_select :eventTime, id: :event_eventTime %>
+    <%= form.label :event_time %>
+    <%= form.time_select :event_time, id: :event_event_time %>
   </div>
 
   <div class="field">
@@ -42,8 +42,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :eventUrl %>
-    <%= form.text_field :eventUrl, id: :event_eventUrl %>
+    <%= form.label :event_url %>
+    <%= form.text_field :event_url, id: :event_event_url %>
   </div>
 
   <div class="field">
