--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <strong>Eventdate:</strong>
-  <%= @event.eventDate %>
+  <%= @event.event_date %>
 </p>
 
 <p>
   <strong>Eventtime:</strong>
-  <%= @event.eventTime %>
+  <%= @event.event_time %>
 </p>
 
 <p>
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Eventurl:</strong>
-  <%= @event.eventUrl %>
+  <%= @event.event_url %>
 </p>
 
 <%= image_tag @event.avatar.url(:medium) %>
