--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,6 +9,8 @@
       <th>Eventdate</th>
       <th>Eventtime</th>
       <th>Location</th>
+      <th>City</th>
+      <th>Genre</th>
       <th>Details</th>
       <th>Artist</th>
       <th>Eventurl</th>
@@ -23,6 +25,8 @@
         <td><%= event.event_date %></td>
         <td><%= event.event_time %></td>
         <td><%= event.location %></td>
+        <td><%= event.city %></td>
+        <td><%= event.genre %></td>
         <td><%= event.details %></td>
         <td><%= event.artist %></td>
         <td><%= event.event_url %></td>
