--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,6 +21,16 @@
 </p>
 
 <p>
+  <strong>City:</strong>
+  <%= @event.city %>
+</p>
+
+<p>
+  <strong>Genre:</strong>
+  <%= @event.genre %>
+</p>
+
+<p>
   <strong>Details:</strong>
   <%= @event.details %>
 </p>
